package br.unitins.topicos1.dto;

public record CidadeDTO (String nome, Long idEstado) { }
