package br.unitins.topicos1.dto;

public record PacienteDTO (
    String nome
) { }
