package br.unitins.topicos1.model;

import jakarta.persistence.Entity;

@Entity
public class Usuario extends DefaultEntity {
    private String username;
    private String senha;

    public String getUsername() {
        return username;
    }

    public void setUsername(String username) {
        this.username = username;
    }

    public String getSenha() {
        return senha;
    }

    public void setSenha(String senha) {
        this.senha = senha;
    }

}
